--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Angular_Todo</title>
     <base href="/"> <!-- needed for Angular HTML5 mode -->
-    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
     <style type="text/css">
