Install bower angular storage and error fix

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app='TodoApp'>
+ <html ng-app="TodoApp"> 
 <head>
     <base href="/">
     <title>Angular Todo</title>
@@ -35,5 +35,6 @@
 <script src='js/app.js'></script>
 <script src='js/controller.js'></script>
 <script src='js/service.js'></script>
+<!-- <script>angular.bootstrap(document, ['TodoApp']);</script> -->
 </body>
 </html>
