Added directive.js to index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <script src='js/app.js'></script>
 <script src='js/controller.js'></script>
 <script src='js/service.js'></script>
+<script src='js/directive.js'></script>
 <!-- <script>angular.bootstrap(document, ['TodoApp']);</script> -->
 </body>
 </html>
