--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html ng-app="TodoApp"> 
 <head>
-    <base href="/">
+    <base href="/angular_todo/">
     <title>Angular Todo</title>
     
 <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
@@ -21,12 +21,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">Angular Todo</a>
+                <a class="navbar-brand" href=".">Angular Todo</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/">Home</a></li>
-                <li><a href="/todo">Todo</a></li>
-                <li><a href="/accounts/register">Account</a></li>
+                <li><a href=".">Home</a></li>
+                <li><a href="todo">Todo</a></li>
+                <li><a href="accounts/register">Account</a></li>
             </ul>
         </div>
     </nav>
